--- a/pillar.example
+++ b/pillar.example
@@ -26,9 +26,7 @@ rabbitmq:
     user2:
       - password: password
       - force: True
-      - tags:
-          - monitoring
-          - user
+      - tags: monitoring, user
       - perms:
         - '/':
           - '.*'
