Added the possibility to configure which ports the AMQP provider will listen in.

--- a/pillar.example
+++ b/pillar.example
@@ -9,6 +9,13 @@ rabbitmq:
       optional_groups:
         - ssl-cert
     group: rabbitmq
+    # Configuration for the AMQP broker
+    rabbit:
+      tcp_listeners:
+        '0.0.0.0': 5672
+        '127.0.0.1': 5671
+    
+
   # Configuration for a rabbitmq cluster
   cluster:
     # Erlang cookie is mandatory
