--- a/pillar.example
+++ b/pillar.example
@@ -12,10 +12,15 @@ rabbitmq:
     # Configuration for the AMQP broker
     rabbit:
       tcp_listeners:
+        '0.0.0.0': 5671
+      # For SSL, both ssl_listeners and ssl_options must be present
+      ssl_listeners:
         '0.0.0.0': 5672
-        '127.0.0.1': 5671
-    
-
+      ssl_options:
+        cacertfile: /srv/certs/bundleca.pem
+        certfile: /srv/certs/{{ grains['fqdn'] }}.pem
+        keyfile: /srv/certs/{{ grains['fqdn'] }}.key
+        
   # Configuration for a rabbitmq cluster
   cluster:
     # Erlang cookie is mandatory
