--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,14 @@ os: 'linux'
 arch: 'amd64'
 dist: 'bionic'
 version: '~> 1.0'
-services:
-  - docker
 
 ## Language and cache config
 language: 'ruby'
 cache: 'bundler'
+
+## Services config
+services:
+  - docker
 
 ## Script to run for the test stage
 script:
@@ -20,18 +22,18 @@ script:
 ## Stages and jobs matrix
 stages:
   - test
-  - name: release
-    if: branch = master AND type != pull_request
+  - name: 'release'
+    if: 'branch = master AND type != pull_request'
 jobs:
   include:
     ## Define the test stage that runs the linters (and testing matrix, if applicable)
 
     # Run all of the linters in a single job
-    - language: node_js
-      node_js: lts/*
-      env: Lint
+    - language: 'node_js'
+      node_js: 'lts/*'
+      env: 'Lint'
       name: 'Lint: salt-lint, yamllint, rubocop & commitlint'
-      before_install: skip
+      before_install: 'skip'
       script:
         # Install and run `salt-lint`
         - pip install --user salt-lint
@@ -84,12 +86,12 @@ jobs:
     # - env: INSTANCE=default-arch-base-latest-2017-7-py2
 
     ## Define the release stage that runs `semantic-release`
-    - stage: release
-      language: node_js
-      node_js: lts/*
-      env: Release
+    - stage: 'release'
+      language: 'node_js'
+      node_js: 'lts/*'
+      env: 'Release'
       name: 'Run semantic-release inc. file updates to AUTHORS, CHANGELOG & FORMULA'
-      before_install: skip
+      before_install: 'skip'
       script:
         # Update `AUTHORS.md`
         - export MAINTAINER_TOKEN=${GH_TOKEN}
@@ -101,7 +103,9 @@ jobs:
                    @semantic-release/exec@3
                    @semantic-release/git@7
       deploy:
-        provider: script
-        cleanup: false
+        provider: 'script'
+        # Using deprecated `skip_cleanup` until `cleanup: false` works reliably
+        # cleanup: false
+        skip_cleanup: true
         # Run `semantic-release`
         script: 'npx semantic-release@15'
