--- a/.travis.yml
+++ b/.travis.yml
@@ -54,36 +54,66 @@ jobs:
     ## Define the rest of the matrix based on Kitchen testing
     # Make sure the instances listed below match up with
     # the `platforms` defined in `kitchen.yml`
-    - env: INSTANCE=default-debian-10-master-py3
+    # - env: INSTANCE=default-debian-10-master-py3
+    - env: INSTANCE=latest-debian-10-master-py3
     - env: INSTANCE=default-ubuntu-1804-master-py3
+    # - env: INSTANCE=latest-ubuntu-1804-master-py3
     # - env: INSTANCE=default-centos-8-master-py3
+    # - env: INSTANCE=latest-centos-8-master-py3
     # - env: INSTANCE=default-fedora-31-master-py3
+    # - env: INSTANCE=latest-fedora-31-master-py3
     # - env: INSTANCE=default-opensuse-leap-151-master-py3
+    # - env: INSTANCE=latest-opensuse-leap-151-master-py3
     # - env: INSTANCE=default-amazonlinux-2-master-py2
+    # - env: INSTANCE=latest-amazonlinux-2-master-py2
     # - env: INSTANCE=default-arch-base-latest-master-py2
+    # - env: INSTANCE=latest-arch-base-latest-master-py2
     # - env: INSTANCE=default-debian-10-2019-2-py3
+    # - env: INSTANCE=latest-debian-10-2019-2-py3
     - env: INSTANCE=default-debian-9-2019-2-py3
+    # - env: INSTANCE=latest-debian-9-2019-2-py3
     - env: INSTANCE=default-ubuntu-1804-2019-2-py3
+    # - env: INSTANCE=latest-ubuntu-1804-2019-2-py3
     # - env: INSTANCE=default-centos-8-2019-2-py3
+    # - env: INSTANCE=latest-centos-8-2019-2-py3
     # - env: INSTANCE=default-fedora-31-2019-2-py3
+    # - env: INSTANCE=latest-fedora-31-2019-2-py3
     # - env: INSTANCE=default-opensuse-leap-151-2019-2-py3
+    # - env: INSTANCE=latest-opensuse-leap-151-2019-2-py3
     # - env: INSTANCE=default-centos-7-2019-2-py2
+    # - env: INSTANCE=latest-centos-7-2019-2-py2
     # - env: INSTANCE=default-amazonlinux-2-2019-2-py2
+    # - env: INSTANCE=latest-amazonlinux-2-2019-2-py2
     # - env: INSTANCE=default-arch-base-latest-2019-2-py2
+    # - env: INSTANCE=latest-arch-base-latest-2019-2-py2
     # - env: INSTANCE=default-fedora-30-2018-3-py3
+    # - env: INSTANCE=latest-fedora-30-2018-3-py3
     - env: INSTANCE=default-debian-9-2018-3-py2
+    # - env: INSTANCE=latest-debian-9-2018-3-py2
     # - env: INSTANCE=default-ubuntu-1604-2018-3-py2
+    # - env: INSTANCE=latest-ubuntu-1604-2018-3-py2
     # - env: INSTANCE=default-centos-7-2018-3-py2
+    # - env: INSTANCE=latest-centos-7-2018-3-py2
     # - env: INSTANCE=default-opensuse-leap-151-2018-3-py2
+    # - env: INSTANCE=latest-opensuse-leap-151-2018-3-py2
     # - env: INSTANCE=default-amazonlinux-2-2018-3-py2
+    # - env: INSTANCE=latest-amazonlinux-2-2018-3-py2
     # - env: INSTANCE=default-arch-base-latest-2018-3-py2
+    # - env: INSTANCE=latest-arch-base-latest-2018-3-py2
     # - env: INSTANCE=default-debian-8-2017-7-py2
+    # - env: INSTANCE=latest-debian-8-2017-7-py2
     - env: INSTANCE=default-ubuntu-1604-2017-7-py2
+    # - env: INSTANCE=latest-ubuntu-1604-2017-7-py2
     # - env: INSTANCE=default-centos-6-2017-7-py2
+    # - env: INSTANCE=latest-centos-6-2017-7-py2
     # - env: INSTANCE=default-fedora-30-2017-7-py2
+    # - env: INSTANCE=latest-fedora-30-2017-7-py2
     # - env: INSTANCE=default-opensuse-leap-151-2017-7-py2
+    # - env: INSTANCE=latest-opensuse-leap-151-2017-7-py2
     # - env: INSTANCE=default-amazonlinux-2-2017-7-py2
+    # - env: INSTANCE=latest-amazonlinux-2-2017-7-py2
     # - env: INSTANCE=default-arch-base-latest-2017-7-py2
+    # - env: INSTANCE=latest-arch-base-latest-2017-7-py2
 
     ## Define the release stage that runs `semantic-release`
     - stage: 'release'
