--- a/pillar.example
+++ b/pillar.example
@@ -39,12 +39,14 @@ rabbitmq:
   config_files:
     # config_files, if you need some stuffs set directly in configuration
     # files, rather than via the light modules available.
-    rabbitmq.config:
-      # Need to add some template in rabbitmq/templates/rabbitmq.config
-      # templates not provided, as is probably too specific...
-      source: templates/relay-rabbitmq.config
+    rabbitmq.conf:
+      # source is relative to `rabbitmq` formula
+      # source: templates/rabbitmq.conf
+      # or absolute in salt fileserver
+      source: salt://files/rabbitmq/rabbitmq.conf
+      # an optional map can be passed to the jinja template
       context:
         src_broker_uri: "amqp://user:pass@10.1.2.3"
-    rabbitmqcfg.json:
-      source: templates/relay-rabbitmqcfg.config
-      # context: is optional map passed to the jinja template...
+#    rabbitmqcfg.json:
+#      source: templates/relay-rabbitmqcfg.config
+#      # context: is optional map passed to the jinja template...
