--- a/pillar.example
+++ b/pillar.example
@@ -3,6 +3,8 @@ rabbitmq:
   # version: "3.5.3-1"
   enabled: true
   running: true
+  env:
+    rabbitmq_mnesia_base: /opt/rabbitmq
   plugin:
     rabbitmq_management:
       - enabled
