ci(kitchen): add salt state to kitchen exec

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -166,6 +166,15 @@ provisioner:
   salt_copy_filter:
     - .kitchen
     - .git
+  # dependencies needed for tests
+  dependencies:
+    # extraneous files provided to the formula
+    - name: files
+      path: ./test/salt
+    # states used to prepare the system before tests
+    - name: states
+      path: ./test/salt
+
 
 verifier:
   # https://www.inspec.io/
@@ -181,6 +190,7 @@ suites:
       state_top:
         base:
           '*':
+            - states.files
             - rabbitmq
             - rabbitmq.config_files
       pillars:
@@ -190,17 +200,16 @@ suites:
               - rabbitmq
       pillars_from_files:
         rabbitmq.sls: pillar.example
-      dependencies:
-        - name: files
-          path: ./test/salt
     verifier:
       inspec_tests:
         - path: test/integration/default
+
   - name: latest
     provisioner:
       state_top:
         base:
           '*':
+            - states.files
             - rabbitmq.latest
             - rabbitmq.config_files
       pillars:
@@ -210,9 +219,6 @@ suites:
               - rabbitmq
       pillars_from_files:
         rabbitmq.sls: pillar.example
-      dependencies:
-        - name: files
-          path: ./test/salt
     verifier:
       inspec_tests:
         - path: test/integration/default
