test(map): verify `map.jinja` dump using `_mapdata` state
* Automated using https://github.com/myii/ssf-formula/pull/282

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -156,6 +156,7 @@ suites:
       state_top:
         base:
           '*':
+            - rabbitmq._mapdata
             - states.files
             - rabbitmq
             - rabbitmq.config_files
@@ -179,6 +180,7 @@ suites:
       state_top:
         base:
           '*':
+            - rabbitmq._mapdata
             - states.files
             - rabbitmq.latest
             - rabbitmq.config_files
