refactor(map): use top-level `values:` key in `map.jinja` dumps
* Semi-automated using https://github.com/myii/ssf-formula/pull/284

--- a/test/integration/default/files/_mapdata/opensuse-15.yaml
+++ b/test/integration/default/files/_mapdata/opensuse-15.yaml
@@ -1,4 +1,6 @@
 # yamllint disable rule:indentation rule:line-length
 # Leap-15
 ---
-rabbitmq-server: rabbitmq-server
+values:
+  pkgs:
+    rabbitmq-server: rabbitmq-server
