--- a/test/integration/default/files/_mapdata/centos-7.yaml
+++ b/test/integration/default/files/_mapdata/centos-7.yaml
@@ -1,4 +1,6 @@
 # yamllint disable rule:indentation rule:line-length
 # CentOS Linux-7
 ---
-rabbitmq-server: rabbitmq-server
+values:
+  pkgs:
+    rabbitmq-server: rabbitmq-server
