--- a/test/integration/default/files/_mapdata/debian-9.yaml
+++ b/test/integration/default/files/_mapdata/debian-9.yaml
@@ -1,4 +1,6 @@
 # yamllint disable rule:indentation rule:line-length
 # Debian-9
 ---
-rabbitmq-server: rabbitmq-server
+values:
+  pkgs:
+    rabbitmq-server: rabbitmq-server
