--- a/test/integration/default/files/_mapdata/fedora-30.yaml
+++ b/test/integration/default/files/_mapdata/fedora-30.yaml
@@ -1,4 +1,6 @@
 # yamllint disable rule:indentation rule:line-length
 # Fedora-30
 ---
-rabbitmq-server: rabbitmq-server
+values:
+  pkgs:
+    rabbitmq-server: rabbitmq-server
