--- a/rabbitmq/parameters/defaults.yaml
+++ b/rabbitmq/parameters/defaults.yaml
@@ -8,6 +8,7 @@ values:
     name: rabbitmq-server
     # https://github.com/rabbitmq/rabbitmq-server/releases/tag/v3.8.14
     use_upstream: repo    # use upstream repo (if applicable)
+    deps: []
   dir:
     base: /usr/lib/rabbitmq
     data: /var/lib/rabbitmq
