tests(_mapdata): fix failing check

--- a/test/integration/default/files/_mapdata/debian-10.yaml
+++ b/test/integration/default/files/_mapdata/debian-10.yaml
@@ -24,6 +24,8 @@ values:
   master: template-master
   pkg:
     name: bash
+    deps:
+      - libtinfo5
   rootgroup: root
   service:
     name: systemd-journald
