--- a/rabbitmq/parameters/os/Debian.yaml
+++ b/rabbitmq/parameters/os/Debian.yaml
@@ -11,8 +11,5 @@
 # you can remove this file or provide at least an empty dict, e.g.
 # values: {}
 ---
-values:
-  pkg:
-    deps:
-      - libtinfo5
+values: {}
 ...
