--- a/rabbitmq/parameters/os_family/Suse.yaml
+++ b/rabbitmq/parameters/os_family/Suse.yaml
@@ -11,5 +11,7 @@
 # you can remove this file or provide at least an empty dict, e.g.
 # values: {}
 ---
-values: {}
+values:
+  pkg:
+    deps: []
 ...
