--- a/test/integration/default/files/_mapdata/ubuntu-20.yaml
+++ b/test/integration/default/files/_mapdata/ubuntu-20.yaml
@@ -58,6 +58,8 @@ values:
     - C@rabbitmq
     - Y:G@id
   pkg:
+    deps:
+      - libtinfo5
     name: rabbitmq-server
     use_upstream: repo
   plugin:
