--- a/test/integration/default/files/_mapdata/debian-9.yaml
+++ b/test/integration/default/files/_mapdata/debian-9.yaml
@@ -17,10 +17,13 @@ values:
       - x-message-ttl: 8640000
   cluster:
     rabbit@locahost:
-    - user: rabbit
-    - host: localhost
-    - ram_node: None
-    - runas: root
+      erlang_cookie:
+        name: /var/lib/rabbitmq/.erlang.cookie
+        value: shared-value-for-all-cluster-members
+      host: localhost
+      ram_node: None
+      runas: root
+      user: rabbit
   config:
     context: {}
     name: /etc/rabbitmq/rabbitmq.conf
@@ -29,6 +32,7 @@ values:
     cleanlist:
     - /usr/local/bin/rabbitmq-env
     - /usr/local/bin/rabbitmq-plugins
+    - /var/run/rabbitmq
     data: /var/lib/rabbitmq
   env:
     context:
@@ -74,15 +78,15 @@ values:
     - definition: '{"ha-mode": "all"}'
   queue:
     my-new-queue:
-    - user: saltstack
-    - passwd: password
-    - durable: true
-    - auto_delete: false
-    - vhost: test_vhost
-    - arguments:
+      arguments:
       - x-message-ttl: 8640000
       - x-expires: 8640000
       - x-dead-letter-exchange: my-new-exchange
+      auto_delete: false
+      durable: true
+      passwd: password
+      user: saltstack
+      vhost: test_vhost
   remove_guest_user: true
   retry_option:
     attempts: 0
