--- a/rabbitmq/parameters/defaults.yaml
+++ b/rabbitmq/parameters/defaults.yaml
@@ -6,13 +6,13 @@
 values:
   cluster:
     rabbit@locahost:
+      user: rabbit    # 'node' would make more sense here
+      host: localhost  # short hostname of node to join to, not fqdn
+      ram_node: None
+      runas: rabbitmq
       erlang_cookie:
         name: /var/lib/rabbitmq/.erlang.cookie
         value: shared-value-for-all-cluster-members
-      host: localhost  # short hostname of node to join to, not fqdn
-      ram_node: None
-      runas: root
-      user: rabbit    # 'node' would make more sense here
   pkg:
     name: rabbitmq-server
     # https://github.com/rabbitmq/rabbitmq-server/releases/tag/v3.8.14
