--- a/test/integration/default/files/_mapdata/centos-7.yaml
+++ b/test/integration/default/files/_mapdata/centos-7.yaml
@@ -17,14 +17,13 @@ values:
       - x-message-ttl: 8640000
   cluster:
     rabbit@locahost:
+      user: rabbit    # 'node' would make more sense here
+      host: localhost  # short hostname of node to join to, not fqdn
+      ram_node: None
+      runas: rabbitmq
       erlang_cookie:
         name: /var/lib/rabbitmq/.erlang.cookie
         value: shared-value-for-all-cluster-members
-      host: localhost
-      ram_node: None
-      runas: root
-      user: rabbit
-
   config:
     context: {}
     name: /etc/rabbitmq.conf
