ci(distros): get centos7 and suse ci working

--- a/rabbitmq/parameters/os_family/Suse.yaml
+++ b/rabbitmq/parameters/os_family/Suse.yaml
@@ -11,5 +11,8 @@
 # you can remove this file or provide at least an empty dict, e.g.
 # values: {}
 ---
-values: {}
+values:
+  pkg:
+    deps:
+      - rabbitmq-server-plugins
 ...
