--- a/kitchen.yml
+++ b/kitchen.yml
@@ -430,3 +430,30 @@ suites:
     verifier:
       inspec_tests:
         - path: test/integration/default
+  - name: redhat
+    provisioner:
+      dependencies:
+        # name: firewalld
+        # repo: git
+        # source: https://github.com/saltstack-formulas/firewalld-formula.git
+        - name: files
+          path: ./test/salt
+        - name: states
+          path: ./test/salt
+      state_top:
+        base:
+          '*':
+            - rabbitmq._mapdata
+            - states.files
+            # firewalld
+            - rabbitmq
+      pillars:
+        top.sls:
+          base:
+            '*':
+              - rabbitmq
+      pillars_from_files:
+        rabbitmq.sls: pillar.example
+    verifier:
+      inspec_tests:
+        - path: test/integration/default
