--- a/pillar.example
+++ b/pillar.example
@@ -19,12 +19,18 @@ rabbitmq:
     running: true
   config:
     # see rabbitmq.conf.example from rabbitmq-server github docs
-    context: {}
+    # see https://www.rabbitmq.com/configure.html
+    context:
+      listeners.tcp.1: 0.0.0.0:5672
   env:
     locale_all: en_US.UTF-8
     context:
+      # https://www.rabbitmq.com/configure.html#supported-environment-variables
       rabbitmq_mnesia_base: /var/lib/rabbitmq
       RABBITMQ_BASE: /var/lib/rabbitmq
+      # RABBITMQ_USE_LONGNAME: true  # not working in ci
+      # https://www.rabbitmq.com/configure.html#supported-environment-variables
+      RABBITMQ_LOG_BASE: /var/log/rabbitmq
   dir:
     base: /var/lib/rabbitmq
 
