--- a/rabbitmq/parameters/osfinger/CentOS-7.yaml
+++ b/rabbitmq/parameters/osfinger/CentOS-7.yaml
@@ -11,5 +11,6 @@
 # you can remove this file or provide at least an empty dict, e.g.
 # values: {}
 ---
-values: {}
+values:
+  locale_all: en_US.UTF-8
 ...
