revert(clusters): add distributed rabbitmq support [skip ci]
This reverts commit 104d7f221cbeaac2d757abce597f27181e7a7c44.

--- a/rabbitmq/parameters/osfinger/CentOS-6.yaml
+++ b/rabbitmq/parameters/osfinger/CentOS-6.yaml
@@ -11,6 +11,5 @@
 # you can remove this file or provide at least an empty dict, e.g.
 # values: {}
 ---
-values:
-  locale_all: en_US.UTF-8
+values: {}
 ...
